[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gtnet"
authors = [
  { name="Andrew Tritt", email="ajtritt@lbl.gov" },
  { name="Ryan Ly", email="rly@lbl.gov" },
]
description = "A package for running Genome Taxonomy Network predictions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    "python",
    "microbiome",
    "microbial-taxonomy",
    "cross-platform",
    "open-data",
    "data-format",
    "open-source",
    "open-science",
    "reproducible-research",
    "machine-learning",
]
dependencies = [
    "numpy>=1.24.3",
    "pandas>=2.0.1",
    "torch>=2.0.1",
]
dynamic = ["version"]

[tool.setuptools.package-data]
gtnet = ["deploy_pkg/{bins,contigs}/*.npz",
         "deploy_pkg/{bins,contigs}/*.pt",
         "deploy_pkg/last.pt",
         "deploy_pkg/manifest.json"]

[project.urls]
"Homepage" = "https://github.com/exabiome/gtnet"
"Bug Tracker" = "https://github.com/exabiome/gtnet/issues"

[project.scripts]
gtnet = "gtnet.main:run"

[tool.pytest.ini_options]
addopts = "--cov --cov-report html"
norecursedirs = "tests/unit/helpers"

[tool.codespell]
skip = "htmlcov,.git,.mypy_cache,.pytest_cache,.coverage,*.pdf,*.svg,venvs,.tox,./docs/_build/*,*.ipynb,./src/gtnet/deploy_pkg"
ignore-words-list = "datas,fpr"

[tool.coverage.run]
branch = true
source = ["src/gtnet/"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.setuptools_scm]

[tool.ruff]
select = ["E", "F", "T100", "T201", "T203"]
exclude = [
  ".git",
  ".tox",
  "__pycache__",
  "build/",
  "dist/",
  "docs/source/conf.py",
  "docs/source/tutorials/",
  "docs/_build/",
]
line-length = 120

[tool.ruff.per-file-ignores]
"gtnet/__init__.py" = ["E402", "F401"]

[tool.ruff.mccabe]
max-complexity = 17
